--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unique Theme</title>
+    <title>HELPTAG 365</title>
     <style>
         body {
             background-color: #ecc4d8;
@@ -94,7 +94,7 @@
             </p>
 
             <p class="owner-info">
-                <b> <span class="owner-property">HOSPITAL:</span> <FONT COLOR="#933490"> unity hospital, 33, Aai Mata Rd, Bhagyoday Industrial Estate, Parvat Patiya, Surat, Gujarat 395010 </FONT></b>
+                <b> <span class="owner-property">HOSPITAL:</span> <FONT COLOR="#933490"> NEAREST HOSPITAL </FONT></b>
             </p>
         </section>
         <a href="https://api.whatsapp.com/send?phone=919313987701&text=Your%20Car%20has%20been%20park%20in%20No%20Parking%20by%20mistake.
